login and signup page build

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
+VITE_apiKey=AIzaSyC-qv44L8vQbWNhF534rCLTvCd4mclr7nc
+VITE_authDomain=reservation-5c1ad.firebaseapp.com
+VITE_projectId=reservation-5c1ad
+VITE_storageBucket=reservation-5c1ad.firebasestorage.app
+VITE_messagingSenderId=818889345321
+VITE_appId=1:818889345321:web:80ce218a2044f437874f38
+
+
+VITE_IMGBB_API_KEY=ea50ba2d6846ff62dc20e09401d0e923
 VITE_API_URL=http://localhost:8000
